# SubCase

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-apks.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/backend/: sub-store-0.min.js  sub-store-1.min.js
app/src/main/cpp/: CMakeLists.txt  main.c  trace.h
app/src/main/res/drawable/: ic_github.xml  ic_server.xml  ic_settings.xml  ic_start.xml  ic_stop.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v29/: themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/release/: google-services.json
corespace/: .gitignore  go.work  go.work.sum
corespace/core/: go.mod  go.sum  http_test.go  main.go
corespace/core/backend/: server.go
corespace/core/component/cache/: store.go
corespace/core/constant/: path.go
corespace/core/frontend/: server.go
corespace/core/log/: level.go  log.go
corespace/core/model/: request.go  response.go
corespace/core/sm/: process.go  sm.go
corespace/core/sm/api/: config.go  console.go  done.go  environment.go  httpclient.go  loon.go  persistent_store.go  script.go
corespace/core/temp/scripts/: sub-store-0.min.js  sub-store-1.min.js
corespace/core/util/: string.go
corespace/ffi/: bridge.c  bridge.h  ffi.go  go.mod  go.sum  log.go  main.go
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: cibot.py  requirements.txt  upload2play.py
(+39 files in other folders)
